--- a/styles/adminstyle.css
+++ b/styles/adminstyle.css
@@ -35,24 +35,22 @@ a.lowlinks,a.lowlinks:hover {
 	position: absolute;
 	visibility: hidden;
 }
-
 #mytable {
-    border-collapse: collapse;
-  }
-
-#mytable td, #my_table th {
-    border: 1px solid #ddd;
-    padding: 8px;
-    text-align:center;
+	border-collapse: collapse;
 }
-
+#mytable td, #my_table th {
+	border: 1px solid #ddd;
+	padding: 8px;
+	text-align:center;
+}
 #mytable tr:nth-child(even){background-color: #f2f2f2;}
-
 #mytable tr:hover {background-color: #ccc;}
-
 #mytable th {
-    padding-top: 12px;
-    padding-bottom: 12px;
-    background-color: #4CAF50;
-    color: white;
+	padding-top: 12px;
+	padding-bottom: 12px;
+	background-color: #4CAF50;
+	color: white;
+}
+.edit {
+	background-color: #ccc;
 }
